# ROSKittiWriter

./: CMakeLists.txt  README.md  package.xml
cfg/: rviz.rviz
include/ros_kitti_writer/: kitti_writer.h  messages_sync.h
launch/: kitti_writer_standalone.launch
src/: camera_subscriber.cpp  kitti_writer.cpp  messages_sync.cpp  ros_kitti_writer_node.cpp
